--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "eslint-plugin-testing-library": "3.9.0",
     "eslint-plugin-unicorn": "26.0.1",
     "typescript": "4.1.3"
+  },
+  "dependencies": {
+    "jimp": "^0.16.1",
+    "jsdom": "^16.4.0"
   }
 }
