--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "4.1.3"
   },
   "dependencies": {
+    "cli-progress": "^3.8.2",
     "jimp": "^0.16.1",
     "jsdom": "^16.4.0"
   }
